--- a/web/src/index.css
+++ b/web/src/index.css
@@ -9,7 +9,7 @@
   font-weight: 400;
 
   --font-mono: "JetBrains Mono", "Courier New", monospace;
-  --font-display: "Rajdhani", system-ui, sans-serif;
+  --font-display: "Orbitron", system-ui, sans-serif;
 
   color-scheme: light dark;
 
